ADM-443 add data builder class to set default value